--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
 </head>
 
 <body>
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-4 d-flex justify-content-md-start justify-content-between align-items-center">
+                    <img src="image/flamin.png" alt="Лого" class="logo">
+                    <h5 class="name-project m-0">Сайт Эльки!</h5>
+                </div>
+                <div class="col-12 col-md-8 d-flex justify-content-md-end flex-column justify-content-center align-items-center flex-md-row">
+                    <nav>    
+                        <ul class="nav-wraper">
+                            
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </header>
     <div class="fon1 tab mt-4 mb-4 shadow rounded" id="quf">
         <form action="index.php" method="POST" class="row mx-5 my-2 gy-1">
             <div class="form_item form-group">
