--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-4 d-flex justify-content-md-start justify-content-between align-items-center">
-                    <img src="image/flamin.png" alt="Лого" class="logo">
+                    <img src="image/flow.jpeg" alt="Лого" class="logo">
                     <h5 class="name-project m-0">Сайт Эльки!</h5>
                 </div>
                 <div class="col-12 col-md-8 d-flex justify-content-md-end flex-column justify-content-center align-items-center flex-md-row">
